Merge versión 2.5 - 2.6 1ª versión barra acciones masivas
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.6@762 e3271b2b-fd41-4d56-bedf-4b5636213925